--- a/CSS/genesis.css
+++ b/CSS/genesis.css
@@ -7,7 +7,7 @@
 
 .general h2 {
     text-align: center;
-    color: #0e811e;
+    color: #04AA6D;
     margin-bottom: 1.5em;
     font-size: 1.8rem;
     font-weight: 700;
@@ -47,7 +47,7 @@ summary::-webkit-details-marker {
 summary:after {
     content: "+";
     font-size: 1.2rem;
-    color: #0e811e;
+    color: #04AA6D;
     margin-left: 1em;
     transition: transform 0.3s ease, color 0.3s ease;
 }
