--- a/CSS/auth.css
+++ b/CSS/auth.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 /* --- NEW: Hide both boxes by default --- */
 .login-box {
     display: none;   /* hidden unless targeted */
@@ -33,7 +36,7 @@ body {
     align-items: center;
     padding: 15px 30px;
     background: #fff;
-    border-bottom: 2px solid #04AA6D;
+    border-bottom: 2px solid #1E3A8A;
     position: fixed;
     top: 0;
     left: 0;
@@ -52,10 +55,10 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 15px 30px;
-    background: #04AA6D;
+    background: #1E3A8A;
     border-bottom: 2px solid #ccc;
     position: fixed;
-    top: 130px; /* just below header */
+    top: 120px; /* just below header */
     left: 0;
     width: 100%;
     box-sizing: border-box;
@@ -69,7 +72,7 @@ body {
 }
 
 .top-nav a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 /* --- Nav Button Toggle --- */
@@ -130,7 +133,7 @@ body {
 .login-form button {
     width: 100%;
     padding: 12px;
-    background:#04AA6D;
+    background:#1E3A8A;
     color: white;
     font-size: 16px;
     border: none;
@@ -141,7 +144,7 @@ body {
 
 /* Button hover effect */
 .login-form button:hover {
-    background: #04AA6D;
+    background: #3F51B5;
 }
 
 /* Terms and Conditions checkbox */
@@ -159,7 +162,7 @@ body {
 
 .terms a {
     text-align: left;
-    color: #04AA6D;
+    color: #1E3A8A;
     text-decoration: none;
 }
 
@@ -174,11 +177,18 @@ body {
 }
 
 .forgot-password a {
-    color: #04AA6D;
+    color: #1E3A8A;
     font-size: 14px;
     text-decoration: none;
 }
 
 .forgot-password a:hover {
     text-decoration: underline;
+}
+/* Remove underline globally */
+a,
+a:hover,
+a:focus,
+a:visited {
+    text-decoration: none; /* no underline in any state */
 }
