--- a/CSS/gov.css
+++ b/CSS/gov.css
@@ -413,3 +413,121 @@ nav a:hover{
 .farmer-type,.amount{
     font-weight: bold;
 }
+
+/* Recent News Updates And Department Quick Links */
+
+.update-quick-links{
+    display: flex;
+    gap:20px;
+    margin-top: 80px;
+
+}
+
+.box{
+    flex: 1;
+    padding: 20px;
+}
+
+.news-update h2{
+    margin-bottom: 10px;
+    font-weight: bold;
+
+}
+
+.news-card{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: white;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+}
+.news-meta{
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+    margin-bottom: 15px;
+
+}
+
+.time{
+    font-size: 0.8rem;
+}
+.news-type{
+    padding: 4px 8px;
+    background-color: #e9ecef;
+    border-radius: 5px;
+    font-size: 0.8rem;
+    color: #495057;
+}
+
+.news-card h3{
+    color: #2c3e50;
+    margin-bottom: 10px;
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+.news-card p{
+    color: #555;
+    font-size: 0.9rem;
+    margin-bottom: 15px;
+}
+.news-btn{
+    background-color: transparent;
+    color: #008554;
+    border: 1px solid #008554;
+    padding: 8px 15px;
+    border-radius: 50px;
+    font-size: 0.9rem;
+}
+
+.news-btn:hover{
+    background-color: #008554;
+    color: #ffffff;
+
+}
+.department-quick-links{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 25px;
+}
+
+.department-quick-links h2{
+    grid-column: 1/-1; /* make the title span full width */
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.department-quick-links-card{
+    border: 1px solid  #ddd;
+    border-radius: 25px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+    padding: 15px;
+    text-align: center;
+    background-color:white;
+    transition: transform 0.3s ease;
+
+}
+
+.department-quick-links-card h4{
+    color: #2c3e50;
+    margin-bottom: 10px;
+    font-size: 1.1rem;
+    font-weight: bold;
+
+}
+
+.department-quick-links-card p{
+    color: #555;
+    font-size: 0.9rem;
+    margin-bottom: 15px;
+
+}
+
+.department-quick-links-card button{
+    background-color: transparent;
+    color: #008554;
+    border: none;
+    font-size: 0.9rem;
+}
